src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirect_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirect_StringErrorContext.class */
public final class ARBDrawIndirect_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglDrawArraysIndirect(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawArraysIndirect(ILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawArraysIndirect(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawArraysIndirect(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("nglDrawElementsIndirect(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawElementsIndirect(IILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawElementsIndirect(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawElementsIndirect(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawArraysIndirect(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        methods.put("glDrawElementsIndirect(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawIndirectErrorContext");
        return methods;
    }
}
